[package]
name = "coyan_fta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
index_vec = "0.1.3"
indicatif = "0.17.8"
itertools = "0.12.0"
quick-xml = "0.31.0"
rand = "0.8.5"
rayon = "1.8.0"
serde_json = "1.0.114"
wait-timeout = "0.2.0"
